--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Gruppe 63",
   "license": "ISC",
   "dependencies": {
+    "firebase": "^3.7.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
@@ -18,10 +19,15 @@
     "babel-loader": "^6.4.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
-    "webpack": "^2.2.1"
+    "css-loader": "^0.27.1",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "image-webpack-loader": "^3.2.0",
+    "style-loader": "^0.13.2",
+    "webpack": "^2.2.1",
+    "webpack-combine-loaders": "^2.0.3"
   },
-  "repository" :
-  { "type" : "git"
-  , "url" : "https://github.com/Tereit/PU_gruppe63_react.git"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Tereit/PU_gruppe63_react.git"
   }
 }
